# vortex-aruco-detection

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  dependencies.repos
.github/workflows/: code-coverage.yml  industrial-ci.yml
aruco-detector/: CMakeLists.txt  package.xml
aruco-detector/config/: aruco_detector_params.yaml
aruco-detector/include/aruco_detector/: aruco_detector.hpp  aruco_detector_ros.hpp  aruco_file_logger.hpp
aruco-detector/include/aruco_detector/lib/: aruco_detector.hpp  aruco_file_logger.hpp
aruco-detector/include/aruco_detector/ros/: aruco_detector_ros.hpp  aruco_file_logger.hpp
aruco-detector/launch/: aruco_detector.launch.py  aruco_detector_launch.py
aruco-detector/params/: aruco_params.yaml
aruco-detector/src/: aruco_detector.cpp  aruco_detector_node.cpp  aruco_detector_ros.cpp  aruco_file_logger.cpp
aruco-detector/src/lib/: aruco_detector.cpp  aruco_file_logger.cpp
aruco-detector/src/ros/: aruco_detector_ros.cpp  aruco_file_logger.cpp
aruco-detector/test/: CMakeLists.txt  aruco_detector_test.cpp
